--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Vue3 练习</title>
+    <title>Vue3 练习_系统</title>
     <!--title><%= htmlWebpackPlugin.options.title %></title-->
   </head>
   <body>
